Add/update tests for src/main/java/com/example/service/DataProcessor.java